--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 gtk+2.0 (2.10.12-2) UNRELEASED; urgency=low
 
   * New patch, 15_default-fallback-icon-theme, sets the default
-    gtk-fallback-icon-theme to "gnome".
+    gtk-fallback-icon-theme to "gnome"; closes: #421353.
 
  -- Loic Minier <lool@dooz.org>  Thu, 03 May 2007 21:26:54 +0200
 
