--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ gtk+2.0 (2.10.12-2) UNRELEASED; urgency=low
 
   * New patch, 15_default-fallback-icon-theme, sets the default
     gtk-fallback-icon-theme to "gnome"; closes: #421353.
+  * Also honor parallel=n in DEB_BUILD_OPTIONS.
 
- -- Loic Minier <lool@dooz.org>  Thu, 03 May 2007 21:26:54 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 08 May 2007 11:10:05 +0200
 
 gtk+2.0 (2.10.12-1) unstable; urgency=low
 
