--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,17 @@ gtk+2.0 (2.10.12-2) UNRELEASED; urgency=low
   * Also honor parallel=n in DEB_BUILD_OPTIONS.
 
   [ Josselin Mouette ]
-  * 032_filechooser-sizing.patch: patch from Carlos Garnacho in bugzilla 
-    #420285. Fixes (among many other things) infinite flickering with 
+  * 032_filechooser-sizing.patch: patch from Carlos Garnacho in bugzilla
+    #420285. Fixes (among many other things) infinite flickering with
     some window managers (closes: #420021).
 
- -- Josselin Mouette <joss@debian.org>  Tue, 15 May 2007 22:47:50 +0200
+  [ Loic Minier ]
+  * New patch 090_capslock-numlock-im-thai, fixes Thai input method when
+    NumLock/CapsLock is on; thanks Theppitak Karoonboonyanan; GNOME #438261;
+    closes: #414698.
+  * Re-add patch 031_cursor-blinking-timeout to patch series.
+
+ -- Loic Minier <lool@dooz.org>  Thu, 17 May 2007 10:23:34 +0200
 
 gtk+2.0 (2.10.12-1) unstable; urgency=low
 
