--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ gtk+2.0 (2.10.12-2) UNRELEASED; urgency=low
 
   [ Josselin Mouette ]
   * 032_filechooser-sizing.patch: patch from Carlos Garnacho in bugzilla
-    #420285. Fixes (among many other things) infinite flickering with
-    some window managers (closes: #420021).
+    #420285, committed in trunk. Fixes (among many other things) infinite
+    flickering with some window managers (closes: #420021).
+  * Refresh other patches.
 
   [ Loic Minier ]
   * New patch 090_capslock-numlock-im-thai, fixes Thai input method when
@@ -16,7 +17,7 @@ gtk+2.0 (2.10.12-2) UNRELEASED; urgency=low
     closes: #414698.
   * Re-add patch 031_cursor-blinking-timeout to patch series.
 
- -- Loic Minier <lool@dooz.org>  Thu, 17 May 2007 10:23:34 +0200
+ -- Josselin Mouette <joss@debian.org>  Fri, 18 May 2007 18:37:49 +0200
 
 gtk+2.0 (2.10.12-1) unstable; urgency=low
 
