--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,11 @@ gtk+2.0 (2.10.12-3) UNRELEASED; urgency=low
     files in complex_doit() calls as dash's echo will always honor escape
     sequences.
   * Conflict with gtk2-engines-ubuntulooks (<= 0.9.11-1).
+  * New patch, 009_gtk-export-filechooser, exports some filechooser API for
+    use in maemo / Hildon; from Nokia, taken from the Ubuntu package; update
+    patch 032_filechooser-sizing to apply cleanly; bump shlibs to 2.10.12-3.
 
- -- Loic Minier <lool@dooz.org>  Wed, 06 Jun 2007 23:32:19 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 06 Jun 2007 23:46:42 +0200
 
 gtk+2.0 (2.10.12-2) unstable; urgency=low
 
