--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ gtk+2.0 (2.10.12-3) UNRELEASED; urgency=low
   * New patch, 009_gtk-export-filechooser, exports some filechooser API for
     use in maemo / Hildon; from Nokia, taken from the Ubuntu package; update
     patch 032_filechooser-sizing to apply cleanly; bump shlibs to 2.10.12-3.
+  * Kill patch 025_dfb-window-destroy-leak from source tree as well now.
 
- -- Loic Minier <lool@dooz.org>  Wed, 06 Jun 2007 23:46:42 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 06 Jun 2007 23:48:14 +0200
 
 gtk+2.0 (2.10.12-2) unstable; urgency=low
 
