--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.11.2-1) UNRELEASED; urgency=low
+gtk+2.0 (2.11.2-1) experimental; urgency=low
 
   * New upstream release series; these are development releases, the new API
     may still change incompatibly.
@@ -14,10 +14,14 @@ gtk+2.0 (2.11.2-1) UNRELEASED; urgency=low
     - Disable 040_filechooser_single-click for now as it doesn't apply cleanly
       and doesn't seem critical; add a description and cross-refs.
     - Update relibtoolizing patch, 070_mandatory-relibtoolize.
-    - Bump up libglib2.0-dev build-dep to >= 2.13.1.
-  * XXX WIP XXX
+    - Bump up build-deps to libglib2.0-dev >= 2.13.1, libpango1.0-dev >=
+      1.15.3, gtk-doc-tools >= 1.6.
+    - Build-dep on libxcomposite-dev for composite support.
+    - Build-dep on libxdamage-dev for damage support.
+    - Enable test print backend by passing --enable-test-print-backend to
+      configure.
 
- -- Loic Minier <lool@dooz.org>  Wed, 13 Jun 2007 12:09:29 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 13 Jun 2007 14:24:01 +0200
 
 gtk+2.0 (2.10.13-1) unstable; urgency=low
 
