--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,15 @@ gtk+2.0 (2.11.2-1) experimental; urgency=low
     - Build-dep on libxdamage-dev for damage support.
     - Enable test print backend by passing --enable-test-print-backend to
       configure.
+  * Update 007_implicit_pointer_conversion_gdkdrawable_directfb to include
+    cairo.h instead of defining the directfb feature manually.
+  * New patch, 006_proper-directfb-modules, fixes pkg-config modules included
+    to build directfb stuff, uncovered by the change in
+    007_implicit_pointer_conversion_gdkdrawable_directfb; refresh
+    relibtoolizing patch.
+  * Add cross-refs to patch headers.
 
- -- Loic Minier <lool@dooz.org>  Wed, 13 Jun 2007 14:24:01 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 13 Jun 2007 16:35:43 +0200
 
 gtk+2.0 (2.10.13-1) unstable; urgency=low
 
