--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 gtk+2.0 (2.11.2-2) UNRELEASED; urgency=low
 
   * 040_filechooser_single-click.patch: fix the patch to apply cleanly 
-    again, and enable it. (Untested yet; use at your own risk!)
+    again, and enable it.
 
  -- Josselin Mouette <joss@debian.org>  Wed, 13 Jun 2007 20:37:07 +0200
 
