--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 gtk+2.0 (2.11.2-2) UNRELEASED; urgency=low
 
-  * 040_filechooser_single-click.patch: fix the patch to apply cleanly 
+  [ Josselin Mouette ]
+  * 040_filechooser_single-click.patch: fix the patch to apply cleanly
     again, and enable it.
 
- -- Josselin Mouette <joss@debian.org>  Wed, 13 Jun 2007 20:37:07 +0200
+  [ Loic Minier ]
+  * Pass -mminimal-toc in CFLAGS for ppc64 support; thanks Andreas Jochens;
+    closes: #386815.
+
+ -- Loic Minier <lool@dooz.org>  Thu, 14 Jun 2007 22:42:06 +0200
 
 gtk+2.0 (2.11.2-1) experimental; urgency=low
 
