--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,9 @@ gtk+2.0 (2.11.4-1) experimental; urgency=low
     API may still change incompatibly.
     - Bump shlibs to >= 2.11.4.
     - Refresh relibtoolizing patch, 070_mandatory-relibtoolize.
+    - Bump up libglib2.0-dev build-dep to >= 2.11.5.
 
- -- Loic Minier <lool@dooz.org>  Tue, 19 Jun 2007 21:18:17 +0200
+ -- Loic Minier <lool@dooz.org>  Wed, 20 Jun 2007 10:47:42 +0200
 
 gtk+2.0 (2.11.2-1) experimental; urgency=low
 
