--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 gtk+2.0 (2.10.13-2) UNRELEASED; urgency=low
 
   * Don't run the directfb testsuite on kfreebsd as it hangs; proposed patch
-    by Petr Salinger; see #431477.
+    by Petr Salinger; closes: #431477.
 
  -- Loic Minier <lool@dooz.org>  Tue, 03 Jul 2007 08:59:53 +0200
 
