--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+gtk+2.0 (2.11.5-1) experimental; urgency=low
+
+  * New upstream development release, with API additions; the new API may
+    still change incompatibly, especially the tooltips API.
+    - Bump shlibs to >= 2.11.5.
+    - Bump up libpango1.0-dev build-dep to >= 1.17.3.
+    - Ship the new gtk-builder-convert Python script to convert Glade files to
+      GtkBuilder syntax in libgtk2.0-dev; call dh_python to generate a
+      ${python:Depends} but Recommend ${python:Depends} to avoid pulling
+      python on buildds; the script requires python >= 2.4, but this is not
+      enforced in the dependencies.
+    - Refresh patches 001_static-linking-dont-query-immodules,
+      006_proper-directfb-modules, 040_filechooser_single-click to apply
+      cleanly.
+    - Update relibtoolizing patch, 070_mandatory-relibtoolize.
+
+ -- Loic Minier <lool@dooz.org>  Tue, 03 Jul 2007 12:49:05 +0200
+
 gtk+2.0 (2.11.4-1) experimental; urgency=low
 
   [ Josselin Mouette ]
