--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gtk+2.0 (2.11.5-2) UNRELEASED; urgency=low
+
+  * Don't run the directfb testsuite on kfreebsd as it hangs; proposed patch
+    by Petr Salinger; closes: #431477.
+
+ -- Loic Minier <lool@dooz.org>  Tue, 03 Jul 2007 18:59:23 +0200
+
 gtk+2.0 (2.11.5-1) experimental; urgency=low
 
   * New upstream development release, with API additions; the new API may
