--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-gtk+2.0 (2.10.13-2) UNRELEASED; urgency=low
+gtk+2.0 (2.10.14-1) unstable; urgency=low
+
+  [ Alan Baghumian ]
+  * New upstream release
+  * Merged with previous changelog entry
 
   [ Loic Minier ]
   * Don't run the directfb testsuite on kfreebsd as it hangs; proposed patch
@@ -13,7 +17,7 @@ gtk+2.0 (2.10.13-2) UNRELEASED; urgency=low
     created if they don't already exist.
   * Install this script and its manual page in libgtk2.0-bin.
 
- -- Josselin Mouette <joss@debian.org>  Fri, 13 Jul 2007 22:54:08 +0200
+ -- Alan Baghumian <alan@technotux.org>  Tue, 17 Jul 2007 09:06:48 +0330
 
 gtk+2.0 (2.10.13-1) unstable; urgency=low
 
