* Fixed and tested 070_mandatory-relibtoolize.patch, * Changelog: UNRELEASED

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gtk+2.0 (2.10.14-1) unstable; urgency=low
+gtk+2.0 (2.10.14-1) UNRELEASED; urgency=low
 
   [ Alan Baghumian ]
   * New upstream release
